syntax = "proto3";
package vjdmhd.lottery.bet;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/bet/params.proto";
import "lottery/bet/bet.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/vjdmhd/lottery/x/bet/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vjdmhd/lottery/bet/params";
  }
  // Queries a Bet by index.
	rpc Bet(QueryGetBetRequest) returns (QueryGetBetResponse) {
		option (google.api.http).get = "/vjdmhd/lottery/bet/bet/{lottery_id}/{creator}";
	}

	// Queries a list of Bet items.
	rpc BetAll(QueryAllBetRequest) returns (QueryAllBetResponse) {
		option (google.api.http).get = "/vjdmhd/lottery/bet/bet";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBetRequest {
	  string lottery_id = 1;
	  string creator = 2;

}

message QueryGetBetResponse {
	Bet bet = 1 [(gogoproto.nullable) = false];
}

message QueryAllBetRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBetResponse {
	repeated Bet bet = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
